Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriIntegerRetBooleanFail.quorum
class Main
    action Main
        integer one = 66
        integer two = 66
        Yoda<integer, integer, boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
